Add modules section

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,4 +1,4 @@
-{{ template "includes/header.html" . }}
+{{ template "partials/header.html" . }}
 
 <div class="row">
 
@@ -15,4 +15,4 @@
 
 </div>
 
-{{ template "includes/footer.html" . }}
+{{ template "partials/footer.html" . }}
