--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -19,6 +19,9 @@
     <script>
         $("img").addClass("img-responsive");
         $("table").addClass("table");
+        $("#TableOfContents").addClass("well");
+        $("#TableOfContents ul").addClass("nav");
+        $("#TableOfContents").affix();
     </script>
 </body>
 </html>
