--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -9,14 +9,14 @@
 
     <link href="/vendor/bootstrap-3.1.1/css/bootstrap.min.css" rel="stylesheet">
     <link href="/vendor/font-awesome-4.1.0/css/font-awesome.min.css" rel="stylesheet">
-    <link href="/vendor/highlight.js/styles/default.css" rel="stylesheet">
+    <link href="/vendor/highlight.js/styles/monokai.css" rel="stylesheet">
     <link href="/styles/style.css" rel="stylesheet">
 
     <link rel="shortcut icon" href="/images/bpesquet.ico">
 
     <title>{{ if .Title }}{{ .Title }}{{ else }}{{ "Baptiste Pesquet" }}{{ end }}</title>
 </head>
-<body>
+<body data-spy="scroll" data-target="#TableOfContents">
     <nav class="navbar navbar-default navbar-fixed-top navbar-inverse" role="navigation">
         <div class="container">
             <div class="navbar-header">
@@ -41,6 +41,13 @@
                             {{ end }}
                         </ul>
                     </li>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Ressources <b class="caret"></b></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="/cours/">Cours</a></li>
+                            <li><a href="/article/">Articles</a></li>
+                        </ul>
+                    </li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="mailto:bpesquet@gmail.com" title="Contact"><i class="fa fa-envelope"></i></a></li>
@@ -53,4 +60,4 @@
     </nav>
 
     <div class="container">
-        <h1>{{ if .Title }}{{ .Title }}{{ else }}{{ "Baptiste Pesquet" }}{{ end }}</h1>
+        <h1 class="pageTitle">{{ if .Title }}{{ .Title }}{{ else }}{{ "Baptiste Pesquet" }}{{ end }}</h1>
