--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -45,7 +45,7 @@
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Ressources <b class="caret"></b></a>
                         <ul class="dropdown-menu">
                             <li><a href="/cours/">Cours</a></li>
-                            <li><a href="/article/">Articles</a></li>
+                            <li><a href="/tutoriel/">Tutoriels</a></li>
                         </ul>
                     </li>
                 </ul>
