--- a/layouts/shortcodes/img.html
+++ b/layouts/shortcodes/img.html
@@ -1,1 +1,1 @@
-<img src="/images/content/{{ .Get 0 }}" class="content centered bordered" />
+<p><img src="/images/content/{{ .Get 0 }}" class="content centered bordered" /></p>
