--- a/layouts/shortcodes/image.html
+++ b/layouts/shortcodes/image.html
@@ -1,5 +1,3 @@
 <!--img src="{{ .Get "src" }}" {{ if .Get "border" }} class="border" {{ end }} {{ with .Get "class" }} class="{{.}}" {{ end }} {{ if or (.Get "alt") (.Get "caption") }} alt="{{ with .Get "alt"}}{{.}}{{else}}{{ .Get "caption" }}{{ end }}"{{ end }} /-->
 
-<p><figure>
-    <img src="/images/content/{{ .Get "src" }}" class="content {{ with .Get "class" }}{{.}}{{ end }}" />
-</figure></p>
+<p><img src="/images/content/{{ .Get "src" }}" class="content {{ with .Get "class" }}{{.}}{{ end }}" alt="{{ .Get "src" }}" /></p>
