--- a/layouts/shortcodes/img.html
+++ b/layouts/shortcodes/img.html
@@ -1,1 +1,1 @@
-<p><img src="/images/content/{{ .Get 0 }}" class="content centered bordered" /></p>
+<p><img src="/images/content/{{ .Get 0 }}" class="content centered bordered" alt="{{ .Get 0 }}" /></p>
