TOC moved up in layouts

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,5 +1,6 @@
 {{ template "partials/header.html" . }}
 
+<h1 class="pageTitle">Baptiste Pesquet</h1>
 <p>Vous trouverez ici des ressources relatives à mon activité professionnelle d'enseignant en informatique. Bienvenue !
 </p>
 
