--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -3,6 +3,7 @@
 <div class="row">
 
     <div class="col-md-12">
+        <h1 class="pageTitle">{{ .Title }}</h1>
         <ul>
             {{ range .Data.Pages.ByTitle }}
                 <li><a href="{{ .Permalink }}">{{ .LinkTitle }}</a></li>
