--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -3,6 +3,7 @@
 <div class="row">
 
     <div class="col-md-9">
+        <h1 class="pageTitle">{{ .Title }}</h1>
         {{ .Content }}
         {{ template "_internal/disqus.html" . }}
     </div>
