--- a/layouts/section/tutoriel.html
+++ b/layouts/section/tutoriel.html
@@ -3,6 +3,7 @@
 <div class="row">
 
     <div class="col-md-12">
+        <h1 class="pageTitle">{{ .Title }}</h1>
         {{ template "partials/tutoriels.html" . }}
     </div>
     
