--- a/layouts/index.html
+++ b/layouts/index.html
@@ -7,7 +7,6 @@
 <div class="row">
     <div class="col-md-6">
         <h1>Supports de cours</h1>
-
         <ul>
             {{ range .Data.Pages.ByTitle }}
             {{ if eq .Type "cours" }}
@@ -19,11 +18,18 @@
 
     <div class="col-md-6">
         <h1>Tutoriels</h1>
-
         {{ template "partials/tutoriels.html" . }}
 
+        <h1>Activités</h1>
+        <ul>
+            {{ range .Data.Pages.ByTitle }}
+            {{ if eq .Type "activite" }}
+                <li><a href="{{ .Permalink }}">{{ .LinkTitle }}</a></li>
+            {{ end }}   
+            {{ end }}
+        </ul>
+
         <h1>Articles</h1>
-        
         <ul>
             {{ range .Data.Pages.ByTitle }}
             {{ if eq .Type "article" }}
@@ -32,7 +38,20 @@
             {{ end }}
         </ul>
     </div>
+</div>
 
+<div class="row">
+    <div class="col-md-12">
+        <h1>Cahiers de textes</h1>
+        <ul>
+            {{ range .Data.Pages.ByTitle }}
+            {{ if eq .Type "cahier" }}
+                <li><a href="{{ .Permalink }}">{{ .LinkTitle }}</a></li>
+            {{ end }}    
+            {{ end }}
+        </ul>
+
+    </div>
 </div>
 
 {{ template "partials/footer.html" . }}
