--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -48,9 +48,11 @@
                         <ul class="dropdown-menu">
                             <li><a href="/cours/">Cours</a></li>
                             <li><a href="/tutoriel/">Tutoriels</a></li>
+                            <li><a href="/activite/">Activités</a></li>
                             <li><a href="/article/">Articles</a></li>
                         </ul>
                     </li>
+                    <li><a href="/cahier/">Cahiers de textes</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="mailto:bpesquet@gmail.com" title="Contact"><i class="fa fa-envelope"></i></a></li>
