--- a/layouts/shortcodes/question.html
+++ b/layouts/shortcodes/question.html
@@ -1,5 +1,4 @@
-<button type="button" class="btn btn-primary" data-toggle="collapse" data-target="#demo">
-    {{ .Get "text" }}
-</button>
-
-<div id="demo" class="collapse out">{{ .Inner }}</div>
+<div class="alert alert-info">
+    <strong>Question</strong>
+    <p>{{ .Inner }}</p>
+</div>
