--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -52,7 +52,7 @@
                             <li><a href="/article/">Articles</a></li>
                         </ul>
                     </li>
-                    <li><a href="/cahier/">Cahiers de textes</a></li>
+                    <li><a href="/avancement/">Avancements</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="mailto:bpesquet@gmail.com" title="Contact"><i class="fa fa-envelope"></i></a></li>
