--- a/layouts/index.html
+++ b/layouts/index.html
@@ -42,7 +42,7 @@
 
 <div class="row">
     <div class="col-md-12">
-        <h1>Cahiers de textes</h1>
+        <h1>Avancements</h1>
         <ul>
             {{ range .Data.Pages.ByTitle }}
             {{ if eq .Type "avancement" }}
