--- a/layouts/index.html
+++ b/layouts/index.html
@@ -8,10 +8,8 @@
     <div class="col-md-6">
         <h1>Supports de cours</h1>
         <ul>
-            {{ range .Data.Pages.ByTitle }}
-            {{ if eq .Type "cours" }}
+            {{ range (where .Data.Pages "Section" "cours").ByTitle }}
                 <li><a href="{{ .Permalink }}">{{ .LinkTitle }}</a></li>
-            {{ end }}    
             {{ end }}
         </ul>
     </div>
@@ -22,19 +20,15 @@
 
         <h1>Activités</h1>
         <ul>
-            {{ range .Data.Pages.ByTitle }}
-            {{ if eq .Type "activite" }}
+            {{ range (where .Data.Pages "Section" "activite").ByTitle }}
                 <li><a href="{{ .Permalink }}">{{ .LinkTitle }}</a></li>
-            {{ end }}   
             {{ end }}
         </ul>
 
         <h1>Articles</h1>
         <ul>
-            {{ range .Data.Pages.ByTitle }}
-            {{ if eq .Type "article" }}
+            {{ range (where .Data.Pages "Section" "article").ByTitle }}
                 <li><a href="{{ .Permalink }}">{{ .LinkTitle }}</a></li>
-            {{ end }}   
             {{ end }}
         </ul>
     </div>
@@ -44,10 +38,8 @@
     <div class="col-md-12">
         <h1>Avancements</h1>
         <ul>
-            {{ range .Data.Pages.ByTitle }}
-            {{ if eq .Type "avancement" }}
+            {{ range (where .Data.Pages "Section" "avancement").ByTitle }}
                 <li><a href="{{ .Permalink }}">{{ .LinkTitle }}</a></li>
-            {{ end }}    
             {{ end }}
         </ul>
 
