--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -46,6 +46,7 @@
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Ressources <b class="caret"></b></a>
                         <ul class="dropdown-menu">
+                            <li><a href="/livre/">Livres</a></li>
                             <li><a href="/cours/">Cours</a></li>
                             <li><a href="/tutoriel/">Tutoriels</a></li>
                             <li><a href="/activite/">Activités</a></li>
