Add warning about replacement and remove modern php tutorial

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -4,6 +4,9 @@
 <p>Vous trouverez ici des ressources relatives à mon activité professionnelle d'enseignant en informatique. Bienvenue !
 </p>
 
+<div class="alert alert-danger">Ce site est remplacé par <a href="http://bpesquet.fr">bpesquet.fr</a> et ne sera plus actualisé. La plupart des ressources ci-dessous ont été intégrées dans d'autres publications.
+</div>
+
 <div class="row">
     <div class="col-md-6">
         <h1>Livres</h1>
